continue to refine the site contents

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Got Your Back</h1>
-                        <p class="intro-text">A peer-to-peer safety network for campus life.<br>Created for students, family, and University Safety Staff.</p>
+                        <p class="intro-text">Your personal safety network for campus life.<br>Created for students, family, and University Safety Staff.</p>
                         <a href="#students" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
