Added gold color to the site

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Got Your Back</span>
+                    <i class="fa fa-play-circle"></i>  <span class="light tinted">Got Your Back</span>
                 </a>
             </div>
 
