Update descriptions - try layout from HHM

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Got Your Back</h1>
-                        <p class="intro-text">Your personal safety network for campus&nbsp;life.<br>Created for students, family, and University Safety Staff.</p>
+                        <p class="intro-text">Your personal safety network for campus&nbsp;life.<br>
+                        Created for students, family, and campus safety staff.</p>
                         <a href="#students" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -115,13 +116,48 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>For Students</h2>
-                <p>GotYourBack allows you to connect with your friends on campus and help each other stay safe.</p>
-                <bl>
-                    <li>Item 1</li>
-                    <li>Item 2</li>
-                </bl>
-                <p>If your college or university is a GotYourBack Affiliate, you will be to... </P>
+                <p>Connect with friends on campus and help each other stay safe.</p>
             </div>
+        </di>
+
+        <div class="row"><br></div>
+
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-4">
+                <h4>iOS 7.1 and CarPlay compatible</h4>
+                <div class="row">
+                    <div class="col-sm-2"><img src="images/feature-time.png" height="40px" width="40px"></div>
+                    <div class="col-sm-10">• Navigate with Maps<br>• Make and receive calls<br>• Listen to received messages<br>• Dictate messages</div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h4>Integrate with your audio system</h4>
+                <div class="row">
+                    <div class="col-sm-2"><img src="images/feature-everywhere.png" height="40px" width="40px"></div>
+                    <div class="col-sm-10">• Listen to your iTunes music<br>• FM transmitter<br>• Wireless Siri button <br>• Noise cancelling microphone</div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row"><br></div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-4">
+                <h4>Simple installation</h4>
+                <div class="row">
+                    <div class="col-sm-2"><img src="images/feature-free.png" height="40px" width="40px"></div>
+                    <div class="col-sm-10">• 7"  display with windshield mount<br>• Glove-friendly touchscreen<br>• Powered using standard USB cable<br>• 12V car power-USB adapter included</div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <h4>Connect your iOS device</h4>
+                <div class="row">
+                    <div class="col-sm-2"><img src="images/feature-organized.png" height="40px" width="40px"></div>
+                    <div class="col-sm-10">• Compatible with iPhone 5, 5c, and 5s<br>• Uses standard Lightning cables<br>• Keeps your device charged</div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
         </div>
     </section>
 
