Update descriptions - try layout from HHM

--- a/index.html
+++ b/index.html
@@ -122,39 +122,56 @@
 
         <div class="row"><br></div>
 
-        <div class="row">
+        <div class="row text-left">
             <div class="col-md-2"></div>
-            <div class="col-md-4">
-                <h4>iOS 7.1 and CarPlay compatible</h4>
+            <div class="col-md-4 text-left">
+                <h4>Manage &amp; Share Outings</h4>
                 <div class="row">
                     <div class="col-sm-2"><img src="images/feature-time.png" height="40px" width="40px"></div>
-                    <div class="col-sm-10">• Navigate with Maps<br>• Make and receive calls<br>• Listen to received messages<br>• Dictate messages</div>
+                    <div class="col-sm-10">
+                        • Destination-based Outings<br>
+                        • Automatic Detection of Conclusion of Outing<br>
+                        • Favorite Destinations
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <h4>Integrate with your audio system</h4>
+                <h4>Report Safety Concerns</h4>
                 <div class="row">
                     <div class="col-sm-2"><img src="images/feature-everywhere.png" height="40px" width="40px"></div>
-                    <div class="col-sm-10">• Listen to your iTunes music<br>• FM transmitter<br>• Wireless Siri button <br>• Noise cancelling microphone</div>
+                    <div class="col-sm-10">
+                        • Anonymous Reporting<br>
+                        • Location-tagged Reports<br>
+                        • Optionally Include Photos
+                    </div>
                 </div>
             </div>
             <div class="col-md-2"></div>
         </div>
-        <div class="row"><br></div>
-        <div class="row">
+        <div class="row"><br><br></div>
+        <div class="row text-left">
             <div class="col-md-2"></div>
             <div class="col-md-4">
-                <h4>Simple installation</h4>
+                <h4>Access Campus Info</h4>
                 <div class="row">
                     <div class="col-sm-2"><img src="images/feature-free.png" height="40px" width="40px"></div>
-                    <div class="col-sm-10">• 7"  display with windshield mount<br>• Glove-friendly touchscreen<br>• Powered using standard USB cable<br>• 12V car power-USB adapter included</div>
+                    <div class="col-sm-10">
+                        • Emergency Announcements<br>
+                        • Request safe ride/walk services<br>
+                        • Campus bus information
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <h4>Connect your iOS device</h4>
+                <h4>Support Friends</h4>
                 <div class="row">
                     <div class="col-sm-2"><img src="images/feature-organized.png" height="40px" width="40px"></div>
-                    <div class="col-sm-10">• Compatible with iPhone 5, 5c, and 5s<br>• Uses standard Lightning cables<br>• Keeps your device charged</div>
+                    <div class="col-sm-10">
+                        • Call and Message <br>
+                        • Share outing details after missed deadline<br>
+                        • Uses standard Lightning cables<br>
+                        • Keeps your device charged
+                    </div>
                 </div>
             </div>
             <div class="col-md-2"></div>
