Update descriptions - try layout from HHM

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- For Students Section -->
     <section id="students" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-md-8 col-md-offset-2">
                 <h2>For Students</h2>
                 <p>Connect with friends on campus and help each other stay safe.</p>
             </div>
@@ -122,55 +122,61 @@
 
         <div class="row"><br></div>
 
-        <div class="row text-left">
-            <div class="col-md-2"></div>
-            <div class="col-md-4 text-left">
+        <div class="row">
+            <div class="col-md-5 col-md-offset-1">
                 <h4>Manage &amp; Share Outings</h4>
                 <div class="row">
-                    <div class="col-sm-2"><img src="images/feature-time.png" height="40px" width="40px"></div>
-                    <div class="col-sm-10">
-                        • Destination-based Outings<br>
-                        • Automatic Detection of Conclusion of Outing<br>
-                        • Favorite Destinations
+                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="images/feature-time.png" height="40px" width="40px"></div>
+                    <div class="col-xs-8 col-sm-8 text-left">
+                        <bl>
+                            <li>Destination-based Outings</li>
+                            <li>Automatically Conclude Outing</li>
+                            <li>Favorite Destinations</li>
+                        </bl>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-1"><br><br></div>
+            <div class="col-md-5">
                 <h4>Report Safety Concerns</h4>
                 <div class="row">
-                    <div class="col-sm-2"><img src="images/feature-everywhere.png" height="40px" width="40px"></div>
-                    <div class="col-sm-10">
-                        • Anonymous Reporting<br>
-                        • Location-tagged Reports<br>
-                        • Optionally Include Photos
+                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="images/feature-everywhere.png" height="40px" width="40px"></div>
+                    <div class="col-xs-8 col-sm-8 text-left">
+                        <bl>
+                            <li>Anonymous Reporting</li>
+                            <li>Location-tagged Reports</li>
+                            <li>Optionally Include Photos</li>
+                        </bl>
                     </div>
                 </div>
             </div>
-            <div class="col-md-2"></div>
         </div>
         <div class="row"><br><br></div>
-        <div class="row text-left">
-            <div class="col-md-2"></div>
-            <div class="col-md-4">
+        <div class="row">
+            <div class="col-md-5 col-md-offset-1">
                 <h4>Access Campus Info</h4>
                 <div class="row">
-                    <div class="col-sm-2"><img src="images/feature-free.png" height="40px" width="40px"></div>
-                    <div class="col-sm-10">
-                        • Emergency Announcements<br>
-                        • Request safe ride/walk services<br>
-                        • Campus bus information
+                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="images/feature-free.png" height="40px" width="40px"></div>
+                    <div class="col-xs-8 col-sm-8 text-left">
+                        <bl>
+                            <li>Emergency Announcements</li>
+                            <li>Request safe ride/walk services</li>
+                            <li>Campus bus information</li>
+                        </bl>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-1"><br><br></div>
+            <div class="col-md-5">
                 <h4>Support Friends</h4>
                 <div class="row">
-                    <div class="col-sm-2"><img src="images/feature-organized.png" height="40px" width="40px"></div>
-                    <div class="col-sm-10">
-                        • Call and Message <br>
-                        • Share outing details after missed deadline<br>
-                        • Uses standard Lightning cables<br>
-                        • Keeps your device charged
+                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="images/feature-organized.png" height="40px" width="40px"></div>
+                    <div class="col-xs-8 col-sm-8 text-left">
+                        <bl>
+                            <li>Call and Message</li>
+                            <li>Share outing details after missed deadline</li>
+                            <li>Uses standard Lightning cables</li>
+                        </bl>
                     </div>
                 </div>
             </div>
