--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="col-md-5 col-md-offset-1">
                 <h4>Manage &amp; Share Outings</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="images/feature-time.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="img/feature-time.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <bl>
                             <li>Destination-based Outings</li>
@@ -140,7 +140,7 @@
             <div class="col-md-5">
                 <h4>Report Safety Concerns</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="images/feature-everywhere.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="img/feature-everywhere.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <bl>
                             <li>Anonymous Reporting</li>
@@ -156,7 +156,7 @@
             <div class="col-md-5 col-md-offset-1">
                 <h4>Access Campus Info</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="images/feature-free.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="img/feature-free.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <bl>
                             <li>Emergency Announcements</li>
@@ -170,7 +170,7 @@
             <div class="col-md-5">
                 <h4>Support Friends</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="images/feature-organized.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="img/feature-organized.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <bl>
                             <li>Call and Message</li>
