correct grid design

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <div class="col-md-8 col-md-offset-2">
                 <h2>For Students</h2>
                 <p>Connect with friends on campus and help each other stay safe.</p>
+                <p>Start an 'Outing' when you head out.  If you don't complete the out on time, your circle of friends will be notified.</p>
             </div>
         </di>
 
@@ -126,56 +127,58 @@
             <div class="col-md-5 col-md-offset-1">
                 <h4>Manage &amp; Share Outings</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="img/feature-time.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-time.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <bl>
-                            <li>Destination-based Outings</li>
-                            <li>Automatically Conclude Outing</li>
-                            <li>Favorite Destinations</li>
+                            <li>Easily Invite Friends &amp; Family</li>
+                            <li>Set Who and When to Notify</li>
+                            <li>
                         </bl>
                     </div>
                 </div>
             </div>
             <div class="col-md-1"><br><br></div>
             <div class="col-md-5">
-                <h4>Report Safety Concerns</h4>
+                <h4>Easily Start An Outing</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="img/feature-everywhere.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-organized.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <bl>
-                            <li>Anonymous Reporting</li>
-                            <li>Location-tagged Reports</li>
-                            <li>Optionally Include Photos</li>
+                            <li>Drop a Pin, Type or Pick an Address</li>
+                            <li>Save Address as a Favorite</li>
+                            <li>Set a Deadline and Head Out</li>
                         </bl>
                     </div>
+                    <div class="col-xs-1"><br></div>
                 </div>
             </div>
         </div>
         <div class="row"><br><br></div>
         <div class="row">
             <div class="col-md-5 col-md-offset-1">
-                <h4>Access Campus Info</h4>
+                <h4>Report Safety Concerns</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="img/feature-free.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-everywhere.png" height="40px" width="40px"></div>
+                    <div class="col-xs-8 col-sm-8 text-left">
+                        <bl>
+                            <li>Anonymous Reporting</li>
+                            <li>Location-Tagged Reports</li>
+                            <li></li>
+                        </bl>
+                    </div>
+                    <div class="col-xs-1"><br></div>
+                </div>
+            </div>
+            <div class="col-md-1"><br><br></div>
+            <div class="col-md-5">
+                <h4>Access Campus Safety Info</h4>
+                <div class="row">
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-free.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <bl>
                             <li>Emergency Announcements</li>
                             <li>Request safe ride/walk services</li>
                             <li>Campus bus information</li>
-                        </bl>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-1"><br><br></div>
-            <div class="col-md-5">
-                <h4>Support Friends</h4>
-                <div class="row">
-                    <div class="col-xs-2 col-xs-offset-2 col-sm-2"><img src="img/feature-organized.png" height="40px" width="40px"></div>
-                    <div class="col-xs-8 col-sm-8 text-left">
-                        <bl>
-                            <li>Call and Message</li>
-                            <li>Share outing details after missed deadline</li>
-                            <li>Uses standard Lightning cables</li>
                         </bl>
                     </div>
                 </div>
