refine wording for Students section

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
                     <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-time.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <bl>
-                            <li>Easily Invite Friends &amp; Family</li>
+                            <li>Invite Friends &amp; Family</li>
                             <li>Set Who and When to Notify</li>
-                            <li>
+                            <li>View Status of Others</li>
                         </bl>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                     <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-organized.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <bl>
-                            <li>Drop a Pin, Type or Pick an Address</li>
+                            <li>Drop a Pin or Enter an Address</li>
                             <li>Save Address as a Favorite</li>
                             <li>Set a Deadline and Head Out</li>
                         </bl>
@@ -156,14 +156,14 @@
         <div class="row"><br><br></div>
         <div class="row">
             <div class="col-md-5 col-md-offset-1">
-                <h4>Report Safety Concerns</h4>
+                <h4>Act On Missed Deadlines</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-everywhere.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-free.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <bl>
-                            <li>Anonymous Reporting</li>
-                            <li>Location-Tagged Reports</li>
-                            <li></li>
+                            <li>Notify Friends &amp; Family</li>
+                            <li>View Last Reported Location</li>
+                            <li>Share Details with Authorities</li>
                         </bl>
                     </div>
                     <div class="col-xs-1"><br></div>
@@ -171,14 +171,16 @@
             </div>
             <div class="col-md-1"><br><br></div>
             <div class="col-md-5">
-                <h4>Access Campus Safety Info</h4>
+                <h4>Report Safety Concerns</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-free.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-everywhere.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <bl>
-                            <li>Emergency Announcements</li>
+                            <!-- <li>Emergency Announcements</li>
                             <li>Request safe ride/walk services</li>
-                            <li>Campus bus information</li>
+                            <li>Campus bus information</li> -->
+                            <li>Submit Reports Anonymously</li>
+                            <li>Location-Tagged Reports</li>
                         </bl>
                     </div>
                 </div>
