--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
             <div class="col-md-5 col-md-offset-1">
                 <h4>Manage &amp; Share Outings</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-time.png" height="30px" width="30px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-time.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
-                        <bl>
+                        <ul class="bullet">
                             <li>Invite Friends &amp; Family</li>
                             <li>Set Who and When to Notify</li>
                             <li>View Status of Others</li>
-                        </bl>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -141,13 +141,13 @@
             <div class="col-md-5">
                 <h4>Easily Start An Outing</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-organized.png" height="30px" width="30px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-organized.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
-                        <bl>
+                        <ul class="bullet">
                             <li>Drop a Pin or Enter an Address</li>
                             <li>Save Address as a Favorite</li>
                             <li>Set a Deadline and Head Out</li>
-                        </bl>
+                        </ul>
                     </div>
                     <div class="col-xs-1"><br></div>
                 </div>
@@ -158,13 +158,13 @@
             <div class="col-md-5 col-md-offset-1">
                 <h4>Act On Missed Deadlines</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-free.png" height="30px" width="30px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-free.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
-                        <bl>
+                        <ul class="bullet">
                             <li>Notify Friends &amp; Family</li>
                             <li>View Last Reported Location</li>
                             <li>Share Details with Authorities</li>
-                        </bl>
+                        </ul>
                     </div>
                     <div class="col-xs-1"><br></div>
                 </div>
@@ -173,15 +173,15 @@
             <div class="col-md-5">
                 <h4>Report Safety Concerns</h4>
                 <div class="row">
-                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-everywhere.png" height="30px" width="30px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-everywhere.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
-                        <bl>
+                        <ul class="bullet">
                             <!-- <li>Emergency Announcements</li>
                             <li>Request safe ride/walk services</li>
                             <li>Campus bus information</li> -->
                             <li>Submit Reports Anonymously</li>
                             <li>Location-Tagged Reports</li>
-                        </bl>
+                        </ul>
                     </div>
                 </div>
             </div>
