Tighten up wording for iPhone 5 form-factor

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
                             <li>Invite Friends &amp; Family</li>
-                            <li>Set Who and When to Notify</li>
+                            <li>Set Who to Notify</li>
+                            <li>Set When to Notify</li>
                             <li>View Status of Others</li>
                         </ul>
                     </div>
@@ -144,9 +145,10 @@
                     <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-organized.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
-                            <li>Drop a Pin or Enter an Address</li>
-                            <li>Save Address as a Favorite</li>
-                            <li>Set a Deadline and Head Out</li>
+                            <li>Drop a Pin</li>
+                            <li>Enter an Address</li>
+                            <li>Save Favorite Addresses</li>
+                            <li>Set Deadline and Head Out</li>
                         </ul>
                     </div>
                     <div class="col-xs-1"><br></div>
@@ -162,7 +164,7 @@
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
                             <li>Notify Friends &amp; Family</li>
-                            <li>View Last Reported Location</li>
+                            <li>View Last Location</li>
                             <li>Share Details with Authorities</li>
                         </ul>
                     </div>
