--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="row">
             <div class="col-md-5 col-md-offset-1">
                 <h4>Manage &amp; Share Outings</h4>
-                <div class="row">
+                <div class="row vertical-align">
                     <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-time.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
@@ -141,7 +141,7 @@
             <div class="col-md-1"><br><br></div>
             <div class="col-md-5">
                 <h4>Easily Start An Outing</h4>
-                <div class="row">
+                <div class="row vertical-align">
                     <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-organized.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
@@ -159,14 +159,13 @@
         <div class="row">
             <div class="col-md-5 col-md-offset-1">
                 <h4>Act On Missed Deadlines</h4>
-                <div class="row">
+                <div class="row vertical-align">
                     <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-free.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
                             <li>Notify Friends &amp; Family</li>
                             <li>View Last Location</li>
-                            <li>Share Details with Authorities</li>
-                        </ul>
+                            <li>Share Details with Authorities</li></ul>
                     </div>
                     <div class="col-xs-1"><br></div>
                 </div>
@@ -174,7 +173,7 @@
             <div class="col-md-1"><br><br></div>
             <div class="col-md-5">
                 <h4>Report Safety Concerns</h4>
-                <div class="row">
+                <div class="row vertical-align">
                     <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-everywhere.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
