--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="col-md-5 col-md-offset-1">
                 <h4>Manage &amp; Share Outings</h4>
                 <div class="row vertical-align">
-                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-time.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-sharing.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
                             <li>Invite Friends &amp; Family</li>
@@ -142,12 +142,12 @@
             <div class="col-md-5">
                 <h4>Easily Start An Outing</h4>
                 <div class="row vertical-align">
-                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-organized.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-outing.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
                             <li>Drop a Pin</li>
                             <li>Enter an Address</li>
-                            <li>Save Favorite Addresses</li>
+                            <li>Tag Favorite Addresses</li>
                             <li>Set Deadline and Head Out</li>
                         </ul>
                     </div>
@@ -160,12 +160,13 @@
             <div class="col-md-5 col-md-offset-1">
                 <h4>Act On Missed Deadlines</h4>
                 <div class="row vertical-align">
-                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-free.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-search.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
-                            <li>Notify Friends &amp; Family</li>
                             <li>View Last Location</li>
-                            <li>Share Details with Authorities</li></ul>
+                            <li>Share Details with Authorities</li>
+                            <li>Notify Friends &amp; Family</li>
+                        </ul>
                     </div>
                     <div class="col-xs-1"><br></div>
                 </div>
@@ -174,7 +175,7 @@
             <div class="col-md-5">
                 <h4>Report Safety Concerns</h4>
                 <div class="row vertical-align">
-                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-everywhere.png" height="40px" width="40px"></div>
+                    <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-free.png" height="40px" width="40px"></div>
                     <div class="col-xs-8 col-sm-8 text-left">
                         <ul class="bullet">
                             <!-- <li>Emergency Announcements</li>
