--- a/index.html
+++ b/index.html
@@ -199,15 +199,78 @@
                 <p>GotYourBack allows your campus security staff to better serve and protect your students.</p>
             </div>
         </div>
+               <div class="row"><br></div>
+
+        <div class="row">
+            <div class="col-md-5 col-md-offset-1">
+                <h4>Promote Safe Behaviors</h4>
+                <p>
+                <div class="row vertical-align">
+                    <!-- <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-sharing.png" height="40px" width="40px"></div> 00> -->
+                    <div class="col-xs-8 col-sm-8 col-xs-offset-1 text-left">
+                        <ul class="bullet">
+                            <li>Encourage Peer Based Support</li>
+                            <li>Make Safety a Social Activity</li>
+                            <li>Provide to Entire Student Body</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1"><br><br></div>
+            <div class="col-md-5">
+                <h4>Faciliate Reporting Safety Concerns</h4>
+                <div class="row vertical-align">
+                    <!-- <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-outing.png" height="40px" width="40px"></div> -->
+                    <div class="col-xs-8 col-sm-8 col-xs-offset-1 text-left">
+                        <ul class="bullet">
+                            <li>Collect Anonymous Safety Reports</li>
+                            <li>Dispatch Officers</li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-1"><br></div>
+                </div>
+            </div>
+        </div>
+        <div class="row"><br><br></div>
+        <div class="row">
+            <div class="col-md-5 col-md-offset-1">
+                <h4>Simpify Access to Safety Services</h4>
+                <div class="row vertical-align">
+                    <!-- <div class="col-xs-2 col-xs-offset-1 col-sm-2"><img src="img/feature-search.png" height="40px" width="40px"></div> -->
+                    <div class="col-xs-8 col-sm-8 col-xs-offset-1 text-left">
+                        <ul class="bullet">
+                            <li>Publish Bus Schedules</li>
+                            <li>Process Safe-Ride Requests</li>
+                            
+                        </ul>
+                    </div>
+                    <div class="col-xs-1"><br></div>
+                </div>
+            </div>
+            <div class="col-md-1"><br><br></div>
+            <div class="col-md-5">
+                <h4>Support Emergency Actions</h4>
+                <div class="row vertical-align">
+                    <!-- <div class="col-xs-2 col-xs-offset-1 col-sm-2"></div> -->
+                    <div class="col-xs-8 col-sm-8 col-xs-offset-1 text-left">
+                        <ul class="bullet">
+                            <li>Push Emergency Announcements</li>
+                            <li>Review Outing Details of Missing Students</li> 
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About GotYourBack</h2>
-                <p>GotYourBack was developed to help enhance better security on college and university campuses.</p>
-                <p>Security starts with a strong support network among students.<p>
+                <h2>About The App</h2>
+                <p>GotYourBack was designed to enhance security on college and university campuses.</p>
+                <p>Our goal is to encourage students to actively participate in their own security.  From supporting each other when out on a trip, reporting safety concerns,  or using support services to ensure their own safety, student involvement is critical to making safer campus environments.<p>
             </div>
         </div>
     </section>
